SERVER-93300 Migrate 35 Libraries from SCons to Bazel (#28292)
Port the following targets from SCons to Bazel:
* enterprise_feature_queryable_and_wiredtiger_enabled
* enterprise_feature_fle_and_js_engine_enabled
* enterprise_feature_streams_and_streams_build_enabled
* enterprise_feature_audit_or_encryptdb_enabled
* use_sasl_client
* use_sasl_client_enabled
* cyrus_sasl_client
* service_context_d
* windows_options
* startup_recovery
* server_lifecycle_monitor
* storage_engine_collection_options_flags_parser
* catalog_impl
* collection_validation
* standalone
* mongod
* audit_mongod
* encryption_key_manager_aux
* encryptdb
* file_copy_based_initial_syncer
* hot_backups
* backup_docs_needed_bounds
* storage_inmemory
* mongo_ldap
* export_collection
* import_collection
* import_collection_command
* export_collection_command
* magic_restore
* queryable_global_options
* queryable_wt
* authz_manager_factory_enterprise
* sasl_oidc_server
* streams_commands
* streams_operators
* streams_management
* tenant_migration_cloners
* repl_coordinator_impl
* tenant_migration_recipient_service
* tcmalloc_set_parameter
* tcmalloc_server_status
* allocator_thread

--- a/src/mongo/db/modules/enterprise/BUILD.bazel
+++ b/src/mongo/db/modules/enterprise/BUILD.bazel
@@ -12,6 +12,7 @@ mongo_cc_library(
         "//bazel/config:enterprise_feature_encryptdb_enabled": [],
         "//conditions:default": ["@platforms//:incompatible"],
     }),
+    visibility = ["//visibility:public"],
     deps = [
         "//src/mongo/util/options_parser",
     ],
