--- a/src/mongo/db/modules/enterprise/src/streams/exec/BUILD.bazel
+++ b/src/mongo/db/modules/enterprise/src/streams/exec/BUILD.bazel
@@ -143,3 +143,194 @@ mongo_cc_library(
         "//src/third_party/libbson:bson",
     ],
 )
+
+mongo_cc_library(
+    name = "streams_operators",
+    srcs = [
+        "change_stream_source_operator.cpp",
+        "checkpoint_coordinator.cpp",
+        "checkpoint_storage.cpp",
+        "collect_operator.cpp",
+        "concurrent_checkpoint_monitor.cpp",
+        "connection_status.cpp",
+        "context.cpp",
+        "dead_letter_queue.cpp",
+        "delayed_watermark_generator.cpp",
+        "document_source_external_api_stub.cpp",
+        "document_source_feeder.cpp",
+        "document_source_remote_db_cursor.cpp",
+        "document_source_validate_stub.cpp",
+        "document_source_window_stub.cpp",
+        "documents_data_source_operator.cpp",
+        "executor.cpp",
+        "external_api_operator.cpp",
+        "fake_kafka_partition_consumer.cpp",
+        "feature_flag.cpp",
+        "generated_data_source_operator.cpp",
+        "group_operator.cpp",
+        "group_processor.cpp",
+        "in_memory_dead_letter_queue.cpp",
+        "in_memory_sink_operator.cpp",
+        "in_memory_source_operator.cpp",
+        "kafka_connect_auth_callback.cpp",
+        "kafka_consumer_operator.cpp",
+        "kafka_emit_operator.cpp",
+        "kafka_event_callback.cpp",
+        "kafka_partition_consumer.cpp",
+        "kafka_partition_consumer_base.cpp",
+        "kafka_resolve_callback.cpp",
+        "kafka_utils.cpp",
+        "limit_operator.cpp",
+        "log_dead_letter_queue.cpp",
+        "log_sink_operator.cpp",
+        "log_util.cpp",
+        "lookup_operator.cpp",
+        "match_operator.cpp",
+        "memory_usage_monitor.cpp",
+        "merge_operator.cpp",
+        "message.cpp",
+        "mongocxx_utils.cpp",
+        "mongodb_dead_letter_queue.cpp",
+        "mongodb_process_interface.cpp",
+        "operator.cpp",
+        "operator_dag.cpp",
+        "output_sampler.cpp",
+        "pipeline_rewriter.cpp",
+        "planner.cpp",
+        "queued_sink_operator.cpp",
+        "rate_limiter.cpp",
+        "redact_operator.cpp",
+        "sample_data_source_operator.cpp",
+        "session_window_assigner.cpp",
+        "single_document_transformation_operator.cpp",
+        "sink_operator.cpp",
+        "sort_operator.cpp",
+        "source_operator.cpp",
+        "stats_utils.cpp",
+        "stream_processor_feature_flags.cpp",
+        "stream_stats.cpp",
+        "tenant_feature_flags.cpp",
+        "timeseries_emit_operator.cpp",
+        "unflushed_state_container.cpp",
+        "unwind_operator.cpp",
+        "util.cpp",
+        "validate_operator.cpp",
+        "watermark_combiner.cpp",
+        "watermark_generator.cpp",
+        "window_assigner.cpp",
+        "window_aware_operator.cpp",
+        "//src/mongo/db/modules/enterprise/src/streams/exec/checkpoint:file_util.cpp",
+        "//src/mongo/db/modules/enterprise/src/streams/exec/checkpoint:local_disk_checkpoint_storage.cpp",
+        "//src/mongo/db/modules/enterprise/src/streams/exec/checkpoint:manifest_builder.cpp",
+        "//src/mongo/db/modules/enterprise/src/streams/exec/checkpoint:restorer.cpp",
+    ],
+    hdrs = [
+        "add_fields_operator.h",
+        "change_stream_source_operator.h",
+        "checkpoint_coordinator.h",
+        "checkpoint_storage.h",
+        "collect_operator.h",
+        "concurrent_checkpoint_monitor.h",
+        "connection_status.h",
+        "constants.h",
+        "context.h",
+        "dead_letter_queue.h",
+        "delayed_watermark_generator.h",
+        "document_source_external_api_stub.h",
+        "document_source_feeder.h",
+        "document_source_remote_db_cursor.h",
+        "document_source_validate_stub.h",
+        "document_source_window_stub.h",
+        "documents_data_source_operator.h",
+        "executor.h",
+        "external_api_operator.h",
+        "fake_kafka_partition_consumer.h",
+        "feature_flag.h",
+        "generated_data_source_operator.h",
+        "group_operator.h",
+        "group_processor.h",
+        "in_memory_dead_letter_queue.h",
+        "in_memory_sink_operator.h",
+        "in_memory_source_operator.h",
+        "kafka_connect_auth_callback.h",
+        "kafka_consumer_operator.h",
+        "kafka_emit_operator.h",
+        "kafka_event_callback.h",
+        "kafka_partition_consumer.h",
+        "kafka_partition_consumer_base.h",
+        "kafka_resolve_callback.h",
+        "kafka_utils.h",
+        "limit_operator.h",
+        "log_dead_letter_queue.h",
+        "log_sink_operator.h",
+        "log_util.h",
+        "lookup_operator.h",
+        "match_operator.h",
+        "memory_usage_monitor.h",
+        "merge_operator.h",
+        "message.h",
+        "mongocxx_utils.h",
+        "mongodb_dead_letter_queue.h",
+        "mongodb_process_interface.h",
+        "noop_sink_operator.h",
+        "operator.h",
+        "operator_dag.h",
+        "output_sampler.h",
+        "pipeline_rewriter.h",
+        "planner.h",
+        "project_operator.h",
+        "queued_sink_operator.h",
+        "rate_limiter.h",
+        "redact_operator.h",
+        "replace_root_operator.h",
+        "restored_checkpoint_info.h",
+        "sample_data_source_operator.h",
+        "session_window_assigner.h",
+        "set_operator.h",
+        "single_document_transformation_operator.h",
+        "sink_operator.h",
+        "sort_operator.h",
+        "source_operator.h",
+        "stats_utils.h",
+        "stream_processor_feature_flags.h",
+        "stream_stats.h",
+        "tenant_feature_flags.h",
+        "test_constants.h",
+        "timeseries_emit_operator.h",
+        "unflushed_state_container.h",
+        "unwind_operator.h",
+        "util.h",
+        "validate_operator.h",
+        "watermark_combiner.h",
+        "watermark_generator.h",
+        "window_assigner.h",
+        "window_aware_operator.h",
+        "//src/mongo/db:change_stream_options_gen",
+        "//src/mongo/db/modules/enterprise/src/streams/commands:stream_ops_gen",
+        "//src/mongo/db/modules/enterprise/src/streams/exec/checkpoint:file_util.h",
+        "//src/mongo/db/modules/enterprise/src/streams/exec/checkpoint:local_disk_checkpoint_storage.h",
+        "//src/mongo/db/modules/enterprise/src/streams/exec/checkpoint:manifest_builder.h",
+        "//src/mongo/db/modules/enterprise/src/streams/exec/checkpoint:restorer.h",
+        "//src/mongo/db/pipeline:aggregation_context_fixture.h",
+        "//src/mongo/db/pipeline:document_source_mock.h",
+        "//src/mongo/db/pipeline:document_source_mock_stages.h",
+        "//src/mongo/db/pipeline:expression_context_for_test.h",
+        "//src/mongo/db/query:query_test_service_context.h",
+    ],
+    copts = MONGOCXX_COPTS,
+    deps = [
+        "streams_config_idl",
+        "streams_exec_common_idl",
+        "streams_exec_internal_idl",
+        "streams_exec_util",
+        "streams_stages_idl",
+        "//src/mongo/crypto:symmetric_crypto",
+        "//src/mongo/db:query_exec",
+        "//src/mongo/db:server_base",
+        "//src/mongo/db/modules/enterprise/src/streams/third_party/mongocxx",
+        "//src/mongo/db/modules/enterprise/src/streams/util:streams_util",
+        "//src/mongo/db/pipeline/process_interface:common_process_interface",
+        "//src/third_party/librdkafka:rdkafka",
+        "//src/third_party/librdkafka:rdkafka++",
+    ],
+)
