--- a/src/mongo/db/modules/enterprise/src/queryable/queryable_wt/BUILD.bazel
+++ b/src/mongo/db/modules/enterprise/src/queryable/queryable_wt/BUILD.bazel
@@ -10,6 +10,35 @@ exports_files(
 )
 
 idl_generator(
-    name = "queryable_global_options",
+    name = "queryable_global_options_gen",
     src = "queryable_global_options.idl",
+)
+
+mongo_cc_library(
+    name = "queryable_wt",
+    srcs = [
+        "blockstore_fs.cpp",
+        "queryable_global_options.cpp",
+        "queryable_global_options_gen",
+        "queryable_wt_init.cpp",
+    ],
+    hdrs = [
+        "blockstore_fs.h",
+        "queryable_global_options.h",
+    ],
+    target_compatible_with = select({
+        "//bazel/config:use_wiredtiger_enabled": [],
+        "//conditions:default": ["@platforms//:incompatible"],
+    }),
+    visibility = ["//visibility:public"],
+    deps = [
+        "//src/mongo/db:service_context",
+        "//src/mongo/db/modules/enterprise/src/queryable/blockstore",
+        "//src/mongo/db/storage:storage_engine_common",
+        "//src/mongo/db/storage:storage_engine_impl",
+        "//src/mongo/db/storage:storage_engine_metadata",
+        "//src/mongo/db/storage/wiredtiger:storage_wiredtiger",
+        "//src/mongo/db/storage/wiredtiger:storage_wiredtiger_core",
+        "//src/mongo/util/options_parser",
+    ],
 )
