SERVER-92496 Limit QueuedSinkOperator to certain number of docs to prevent long flushes (#26381)
This PR adds a limit on the document count that the `QueuedSinkOperator`
can hold. The current implementation uses the byte size as a limit, this
change adds the document count limit on top.
To achieve this, the QueuedSinkOperator is maintaining it's own
SingleProducer-SingleConsumer queue.

--- a/src/mongo/db/modules/enterprise/src/streams/exec/tests/SConscript
+++ b/src/mongo/db/modules/enterprise/src/streams/exec/tests/SConscript
@@ -720,6 +720,19 @@ env.CppUnitTest(
 )
 
 env.CppUnitTest(
+    target="streams_producer_consumer_queue_test",
+    source=[
+        "streams_producer_consumer_queue_test.cpp",
+    ],
+    LIBDEPS=[
+        "$BUILD_DIR/mongo/base",
+        "$BUILD_DIR/mongo/db/exec/document_value/document_value_test_util",
+        "../streams_exec_util",
+        "streams_test_utils",
+    ],
+)
+
+env.CppUnitTest(
     target="external_api_operator_test",
     source=[
         "external_api_operator_test.cpp",
