SERVER-82674 Prevent NITL from owning a TransportLayerManager (#27825)
This commit prevents the NetworkInterfaceTL from creating a
TransportLayerManager that it owns. In order to startup the
NetworkInterfaceTL, it is now a requirement to either pass in a service
context or have a service context set globally. In both cases a
TransportLayerManager must also be set on the service context.

--- a/src/mongo/db/modules/enterprise/src/ldap/SConscript
+++ b/src/mongo/db/modules/enterprise/src/ldap/SConscript
@@ -16,6 +16,7 @@ if not env.TargetOSIs("darwin"):
         LIBDEPS=[
             "$BUILD_DIR/mongo/db/auth/auth",
             "$BUILD_DIR/mongo/db/process_health/fault_manager",
+            "$BUILD_DIR/mongo/db/process_health/fault_manager_test_suite",
             "$BUILD_DIR/mongo/db/service_context",
             "$BUILD_DIR/mongo/executor/task_executor_test_fixture",
             "$BUILD_DIR/mongo/executor/thread_pool_task_executor_test_fixture",
