SERVER-92701: Add verbose/useful user-facing errors to Kafka network callbacks (rebased/fixed test) (#26113)
This PR:

- Adds a simple base class to be used in Kafka network callbacks to
simplify exposing user-facing log messages to users
- Adds some jstest cases to test for conditions where GWProxy has failed
or is not available

(This is rebasing/re-opening a merged/reverted earlier version of this
PR, which contained a jstest that was failing).

Changes that occurred after last approved PR are included in commits
including/after 0df002a)

--- a/src/mongo/db/modules/enterprise/src/streams/exec/BUILD.bazel
+++ b/src/mongo/db/modules/enterprise/src/streams/exec/BUILD.bazel
@@ -172,6 +172,7 @@ mongo_cc_library(
         "in_memory_dead_letter_queue.cpp",
         "in_memory_sink_operator.cpp",
         "in_memory_source_operator.cpp",
+        "kafka_callback_base.cpp",
         "kafka_connect_auth_callback.cpp",
         "kafka_consumer_operator.cpp",
         "kafka_emit_operator.cpp",
@@ -252,6 +253,7 @@ mongo_cc_library(
         "in_memory_dead_letter_queue.h",
         "in_memory_sink_operator.h",
         "in_memory_source_operator.h",
+        "kafka_callback_base.h",
         "kafka_connect_auth_callback.h",
         "kafka_consumer_operator.h",
         "kafka_emit_operator.h",
